syntax = "proto3";

package proto;

enum ServiceRole {
  UNKNOWN_ROLE = 0;
  ALL = 1;
  META = 2;
  GRAPH = 3;
  STORAGE = 4;
}

enum Status {
  UNKNOWN = 0;
  RUNNING = 1;
  EXITED = 2;
}

message StartServiceRequest {
  ServiceRole role = 1;
  string dir = 2;
}

message StartServiceResponse {}

message StopServiceRequest {
  ServiceRole role = 1;
  string dir = 2;
}

message StopServiceResponse {}

message ServiceStatusRequest {
  ServiceRole role = 1;
  string dir = 2;
}

message ServiceStatusResponse { Status status = 1; }

message BanReadWriteRequest {
  ServiceRole role = 1;
  string addr = 2;
}

message BanReadWriteResponse {}

message AllowReadWriteRequest {
  ServiceRole role = 1;
  string addr = 2;
}

message AllowReadWriteResponse {}

service AgentService {
  rpc StartService(StartServiceRequest) returns (StartServiceResponse);
  rpc StopService(StopServiceRequest) returns (StopServiceResponse);
  rpc ServiceStatus(ServiceStatusRequest) returns (ServiceStatusResponse);

  rpc BanReadWrite(BanReadWriteRequest) returns (BanReadWriteResponse);
  rpc AllowReadWrite(AllowReadWriteRequest) returns (AllowReadWriteResponse);
}
